2012-08-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* tests/, updmap* (removed): Moved from here to ../texlive/.
	* Makefile.am: Adapted.

2012-08-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* e2pall.man, texdoctk.man, texdoctk.man: Moved to ../texlive/.
	* Makefile.am: Adapted.

2012-08-04  Karl Berry  <karl@tug.org>

	* tl-sys-wrapper: not needed.  The Windows wrapper, runscript.tlu,
	already handles -sys, as does the Windows fmtutil.c.
	* Makefile.am (EXTRA_DIST): remove it again.

2012-08-03  Karl Berry  <karl@tug.org>

	* tl-sys-wrapper.pl: initial attempt.

2012-07-31  Norbert Preining  <preining@logic.at>

	* updmap.pl (main): fix quoting and var expansion on Windows.
	* updmap.pl (main): and another fix, this time for PATH separator

2012-07-30  Norbert Preining  <preining@logic.at>

	* updmap.pl (main): support for multiple entry TEXMFLOCAL.
	Tell the user which config files is used for writing.

2012-07-23  Karl Berry  <karl@tug.org>

	* updmap.pl (help): we have both --showoption and --showoptions.
	Ugh.  Found by Bruno Voisin, 11 Jun 2012 21:34:44.

2012-06-10  Norbert Preining  <preining@logic.at>

	* updmap.pl: fix ordering of how updmap.cfg files are read
	and add documentation.

2012-06-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (EXTRA_DIST): Add the new file updmap.help2man.

2012-06-01  Karl Berry  <karl@tug.org>

	* Makefile.am (xupdmap.man): new (phony) target to run help2man.
	* updmap.help2man: new file.

	* updmap.pl: consistently use $prg, and remove .pl suffix.

2012-05-31  Karl Berry  <karl@tug.org>

	* updmap.pl (reset_root_home): accept /var/root.

2012-05-31  Norbert Preining  <preining@logic.at>

	* updmap.pl: reset root $HOME if it is not the real one, since
	sudo does not reset it

2012-05-21  Norbert Preining  <preining@logic.at>

	* updmap.pl
	  . on win32, ensure file names are in lower case 
	  . add --dvipdfmxoutputdir, make --dvipdfmoutputdir synonym
	    (more or less)