@@ -1,6 +1,8 @@
 2012-08-07  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
-	* tests/, updmap* (removed): Moved from here to ../texlive/.
+	* tests/, all*, dvi2fax*, dvired*, fontinst*, kpsetool*,
+	kpsewhere*, ps2frag*, pslatex*, rubibtex*, rumakeindex*,
+	updmap* (removed): Moved from here to ../texlive/.
 	* Makefile.am: Adapted.
 
 2012-08-06  Peter Breitenlohner  <peb@mppmu.mpg.de>
